// Generated by j5build v0.0.0-20250327071644-781ea9870e8f. DO NOT EDIT

syntax = "proto3";

package test.v1.service;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "test/v1/bar.j5s.proto";

service BarQueryService {
  option (j5.ext.v1.service).state_query.entity = "bar";

  rpc BarGet(BarGetRequest) returns (BarGetResponse) {
    option (google.api.http) = {get: "/test/v1/bar/q/{bar_id}/{bar_other_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc BarList(BarListRequest) returns (BarListResponse) {
    option (google.api.http) = {get: "/test/v1/bar/q"};
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc BarEvents(BarEventsRequest) returns (BarEventsResponse) {
    option (google.api.http) = {get: "/test/v1/bar/q/{bar_id}/{bar_other_id}/events"};
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}

message BarGetRequest {
  option (j5.ext.v1.message).object = {};

  string bar_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];

  string bar_other_id = 2 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];
}

message BarGetResponse {
  option (j5.ext.v1.message).object = {};

  test.v1.BarState bar = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];
}

message BarListRequest {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageRequest page = 1 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 2 [(j5.ext.v1.field).object = {}];
}

message BarListResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.v1.BarState bar = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).array = {}
  ];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message BarEventsRequest {
  option (j5.ext.v1.message).object = {};

  string bar_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];

  string bar_other_id = 2 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];

  j5.list.v1.PageRequest page = 3 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 4 [(j5.ext.v1.field).object = {}];
}

message BarEventsResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.v1.BarEvent events = 1 [(j5.ext.v1.field).array = {}];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}
